# coq-hol-light-real-with-nat

./: .gitignore  AUTHORS.md  CHANGES.md  CONFIG  HOLLight_Real.v  Makefile  README.md  With_N.v  With_nat.v  _CoqProject  coq-hol-light-real-with-nat.opam  coq-hol-light-real.opam  deps.mk  erasing.lp  hol_upto_real.ml  hol_upto_realax.ml  mappings.lp  mappings.mk  mappings.v  realcategorical.v  realprop.v  realsyntax.v  reproduce  terms.v  theorems.v  theory_hol.v  types.v
.github/workflows/: docker-action.yml  main.yml
